# opencv_video_streamer

./: CMakeLists.txt  README.md  client.cpp  server.cpp
src/: client.cpp  server.cpp
